feat: Complete Figment CLI with MCP integration
  - Add comprehensive brand-aware AI code generation CLI
  - Implement MCP server for AI tool integration
  - Add example brand configurations (startup, creative agency)
  - Include auto-configuration for Claude Code and Gemini CLI
  - Add GitHub CI/CD workflow
  - Update licensing to proprietary
  - Complete documentation and publishing guide

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,27 @@ playwright-report/
 # Project documentation
 figment.md
 GEMINI.md
+
+# Build artifacts that were accidentally tracked
+figment-variables.css
+
+# User-specific figment configurations (these are personal brand guides)
+.figment/
+*.figment-config.json
+
+# Temporary files and caches
+*.tmp
+*.temp
+.cache/
+
+# Package tarballs (created during npm pack)
+*.tgz
+*.tar.gz
+
+# Runtime configuration files (should be user-specific)
+.mcp.json
+claude_desktop_config.json
+
+# Editor-specific files
+.vscode/settings.json
+.idea/workspace.xml
