fix: Fix monorepo build order to resolve TypeScript dependencies
- Change build script from parallel --workspaces to sequential execution
- Ensures core package builds first before CLI tries to import its types
- Fixes GitHub Actions CI build failures with missing module declarations

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "npm run build:core && npm run build:cli && npm run build:web",
     "build:core": "npm run build -w packages/core",
     "build:cli": "npm run build -w packages/cli", 
     "build:web": "npm run build -w packages/web",
