fix: Update installation instructions and fix test issues
- Update README to use GitHub installation instead of placeholder npm package
- Add npm package to roadmap as 'coming soon'
- Fix test-e2e.js ES module syntax errors (convert to CommonJS)
- Add missing test script to web package
- Fix vitest to run once instead of watch mode for CI
- Remove placeholder npm badge until package is published

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,7 +30,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "start": "node dist/server.js",
-    "test": "vitest",
+    "test": "vitest run",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
     "prepublishOnly": "npm run build"
