--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3456",
     "build": "next build",
     "start": "next start -p 3456",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "test": "echo 'No tests for web package yet'"
   },
   "dependencies": {
     "animejs": "^3.2.2",
