--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,18 @@ jobs:
     - name: Run tests
       run: npm test
     
-    - name: Test CLI installation
+    - name: Test CLI functionality
       run: |
+        # Test CLI directly from dist folder (since it's built)
+        node packages/cli/dist/cli.js --version
+        node packages/cli/dist/cli.js --help
+        node packages/cli/dist/cli.js status
+        
+        # Test package structure
         cd packages/cli
-        npm pack
-        npm install -g ./figmentdev-figment-*.tgz
-        figment --version
-        figment --help
+        npm pack --dry-run
 
-  publish-check:
+  package-validation:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/main'
@@ -65,10 +68,17 @@ jobs:
     - name: Build packages
       run: npm run build
     
-    - name: Check CLI package structure
+    - name: Validate package readiness
       run: |
+        echo "📦 Checking CLI package structure..."
         cd packages/cli
         npm pack --dry-run
         ls -la dist/
         file dist/cli.js
+        echo "✅ CLI package structure looks good!"
+        
+        echo "📋 Package contents:"
         head -n 5 dist/cli.js
+        
+        echo "📊 Package info:"
+        npm pack 2>/dev/null | tail -1 | xargs ls -lh
