--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,7 +19,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^2.0.0",
-    "figment-mcp": "file:../core"
+    "@figmentdev/sdk": "0.1.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.13",
